[metadata]
name = CryptoZero
version = 0.1.0a1
description = Make it easy for learning groups to use simple cryptographic techniques in python
long_description = README.md
long_description_content_type = text/markdown
author = Anthony King
author-email = anthonydking@gmail.com
license = MIT License
license-file = LICENSE
project_urls =
    Source Code = https://github.com/py-zero/cryptozero
    Bug Tracker = https://github.com/py-zero/cryptozero/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Education
    Topic :: Security :: Cryptography


[options]
zip_safe = true
packages = find:
python_requires = >=3.5
install_requires =
    cryptography==2.3
    mypy-extensions==0.3.0
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-coverage
    pytest-mock


[aliases]
test = pytest


[bdist_wheel]
universal = 1


[tool:pytest]
addopts = --cov


[coverage:run]
branch = True
source = cryptozero

[coverage:report]
fail_under = 100
